Cut down on HTML in Colors&Type of UI kit

--- a/src/UI Kit/colors-type.html
+++ b/src/UI Kit/colors-type.html
@@ -25,47 +25,14 @@
       <dd style="top: 692px">Green <br /><span>#6FCF97</span></dd>
     </dl>
     <dl class="fonts">
-      <dt style="font-size: 24px; line-height: 29px; top: 145px; left: 854px">
-        H1
-      </dt>
-      <dd style="font-size: 24px; line-height: 29px; top: 145px; width: 369px">
-        This one is the sub-section or widget title
-      </dd>
-
-      <dt style="font-size: 19px; line-height: 23px; top: 255px; left: 856px">
-        H2
-      </dt>
-      <dd style="font-size: 19px; line-height: 23px; top: 255px; width: 312px">
-        Next one is the item title inside widgets
-      </dd>
-      <dt style="font-size: 12px; line-height: 15px; top: 353px; left: 866px">
-        H3
-      </dt>
-      <dd
-        style="
-          font-size: 12px;
-          line-height: 15px;
-          top: 353px;
-          width: 186px;
-          text-transform: uppercase;
-        "
-      >
-        This is a label or CTA text
-      </dd>
-
-      <dt style="font-size: 14px; line-height: 24px; top: 418px; left: 846px">
-        Body
-      </dt>
-      <dd
-        style="
-          font-size: 14px;
-          line-height: 24px;
-          top: 418px;
-          width: 301px;
-          font-weight: normal;
-          color: rgba(31, 32, 65, 0.75);
-        "
-      >
+      <dt style="left: 854px">H1</dt>
+      <dd style="width: 369px">This one is the sub-section or widget title</dd>
+      <dt style="left: 856px">H2</dt>
+      <dd style="width: 312px">Next one is the item title inside widgets</dd>
+      <dt style="left: 866px">H3</dt>
+      <dd style="width: 186px">This is a label or CTA text</dd>
+      <dt style="left: 846px">Body</dt>
+      <dd style="width: 301px; color: rgba(31, 32, 65, 0.75)">
         This is the body text which is used for most of the design, like
         paragraphs, lists, etc.
       </dd>
