--- a/src/UI Kit/form-elements.html
+++ b/src/UI Kit/form-elements.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,9 +20,9 @@
         <input type="text" id="act" value="This is pretty awesome" />
       </div>
       <div class="text-field dropdown">
-        <label for="standard-select">Dropdown</label>
-        <div class="select">
-          <select name="" id="standard-select">
+        <label for="select">Dropdown</label>
+        <div class="select-wrapper">
+          <select name="drop-guests" id="select">
             <option value="Option 1" selected disabled hidden>
               Сколько гостей
             </option>
@@ -32,7 +32,20 @@
               Option that has too long of a value to fit
             </option>
           </select>
-          <span class="focus"></span>
+        </div>
+      </div>
+      <div class="text-field masked">
+        <label for="mask">masked text field</label>
+        <input type="date" id="mask" value="дд.мм.гггг" />
+      </div>
+      <div class="wrapper">
+        <div class="text-field date-drop-1 select-wrapper">
+          <label for="date-1">date dropdown</label>
+          <input type="date" id="date-1" value="дд.мм.гггг" />
+        </div>
+        <div class="text-field date-drop-2 select-wrapper">
+          <label for="date-1">date dropdown</label>
+          <input type="date" id="date-2" value="19.08.2019" />
         </div>
       </div>
     </div>
