--- a/src/UI Kit/form-elements.html
+++ b/src/UI Kit/form-elements.html
@@ -38,15 +38,17 @@
         <label for="mask">masked text field</label>
         <input type="date" id="mask" value="дд.мм.гггг" />
       </div>
-      <div class="wrapper">
-        <div class="text-field date-drop-1 select-wrapper">
-          <label for="date-1">date dropdown</label>
-          <input type="date" id="date-1" value="дд.мм.гггг" />
-        </div>
-        <div class="text-field date-drop-2 select-wrapper">
-          <label for="date-1">date dropdown</label>
-          <input type="date" id="date-2" value="19.08.2019" />
-        </div>
+      <div class="text-field date-drop-1 select-wrapper">
+        <label for="date-1">date dropdown</label>
+        <input type="date" id="date-1" value="дд.мм.гггг" />
+      </div>
+      <div class="text-field date-drop-2 select-wrapper">
+        <label for="date-1">date dropdown</label>
+        <input type="date" id="date-2" value="2019-08-19" />
+      </div>
+      <div class="text-field filter-date select-wrapper">
+        <label for="filter">filter date dropdown</label>
+        <input type="date" id="filter" value="дд.мм.гггг" />
       </div>
     </div>
   </body>
